--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   mobile_scanner: ^3.2.0
   barcode_widget: ^2.0.4
+  web_scraper: ^0.1.4
+  url_launcher: ^6.3.1
   
 
 
@@ -50,6 +52,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.3
+  
 
 flutter_icons:
   image_path: "assets/icon.png"
