--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   mobile_scanner: ^3.2.0
   barcode_widget: ^2.0.4
+  barcode: ^2.2.9
   web_scraper: ^0.1.4
   url_launcher: ^6.3.1
 
@@ -22,6 +23,9 @@ dependencies:
 
   sqflite: ^2.0.0+3
   path: ^1.8.0
+
+  pdf: ^3.11.3
+  printing: ^5.14.2
   
 
 
