--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   barcode: ^2.2.9
   web_scraper: ^0.1.4
   url_launcher: ^6.3.1
+  path_provider: ^2.0.11
 
   animated_splash_screen: ^1.3.0
   get: ^4.7.2
@@ -26,6 +27,7 @@ dependencies:
 
   pdf: ^3.11.3
   printing: ^5.14.2
+  share_plus: ^10.1.4
   
 
 
